# templates

./: .gitignore  make_c.py
opengl/: CMakeLists.txt  README.md
opengl/inc/: buffer.hpp  common.hpp  draw.hpp  renderer.hpp  shader.hpp  texture.hpp  window.hpp
opengl/shader/: frag.frag  vert.vert
opengl/src/: buffer.cpp  common.cpp  draw.cpp  main.cpp  renderer.cpp  shader.cpp  texture.cpp  window.cpp
